--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.26.3"
   }
- 
 }
