--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
+
 {
-  "name": "frontend",
+  "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ashish-me-15.github.io/E-commerce",
   "dependencies": {
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1"
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,11 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-react": "^7.26.3",
-    "gh-pages": "^6.3.0"
-  },
-  "homepage": "https://aashishsharma.github.io/e-comm-react"
+  }
 }
+
